--- a/notebooks/model_testing.ipynb
+++ b/notebooks/model_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 70 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Exterior  BrkFace  VinylSd  Wd Sdng  BrkFace  VinylSd"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "Exterior  BrkFace  VinylSd  Wd Sdng  BrkFace  VinylSd"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,6 +691,285 @@
     "y = model_df['SalePrice']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:335: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(dtype):\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:338: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  is_categorical_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:384: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if is_categorical_dtype(dtype):\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:359: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  return is_int or is_bool or is_float or is_categorical_dtype(dtype)\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:520: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(data):\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:335: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(dtype):\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:338: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  is_categorical_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:384: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if is_categorical_dtype(dtype):\n",
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/xgboost/data.py:359: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  return is_int or is_bool or is_float or is_categorical_dtype(dtype)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "modelo = XGBRegressor(objective=\"reg:squarederror\",n_jobs=-1,n_estimators=1000,max_depth=3,learning_rate=0.1)\n",
+    "\n",
+    "modelo.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat = modelo.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04705243946415031"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "error = mean_squared_error(y_hat, y_test)\n",
+    "error = np.sqrt(error)\n",
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average error is 11.44%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average error is {100*(10**error - 1):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.007235 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 3662\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2301, number of used features: 151\n",
+      "[LightGBM] [Info] Start training from score 5.224001\n"
+     ]
+    }
+   ],
+   "source": [
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "modelo = LGBMRegressor(objective=\"regression\", n_jobs=-1)\n",
+    "\n",
+    "modelo.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat = modelo.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05031035273460047"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error = mean_squared_error(y_hat, y_test)\n",
+    "\n",
+    "error = np.sqrt(error)\n",
+    "\n",
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average error is 12.28%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average error is {100*(10**error - 1):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eduardo/Desktop/machine-learning/Machine-Learning-Ames/env/lib/python3.10/site-packages/sklearn/svm/_base.py:297: ConvergenceWarning: Solver terminated early (max_iter=100000).  Consider pre-processing your data with StandardScaler or MinMaxScaler.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "modelo = SVR(kernel=\"linear\", C=1e5, epsilon=0.2, max_iter=100000)\n",
+    "\n",
+    "modelo.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat = modelo.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1993504684096772"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error = mean_squared_error(y_hat, y_test)\n",
+    "\n",
+    "error = np.sqrt(error)\n",
+    "\n",
+    "error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average error is 58.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average error is {100*(10**error - 1):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
+    "model = KNeighborsRegressor(n_neighbors=10)\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "yhat = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average error is 22.65%\n"
+     ]
+    }
+   ],
+   "source": [
+    "error = mean_squared_error(yhat, y_test)\n",
+    "\n",
+    "error = np.sqrt(error)\n",
+    "\n",
+    "print(f\"Average error is {100*(10**error - 1):.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average error is 14.70%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import BayesianRidge\n",
+    "\n",
+    "model = BayesianRidge()\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "yhat = model.predict(X_test)\n",
+    "\n",
+    "error = np.sqrt(mean_squared_error(yhat, y_test))\n",
+    "\n",
+    "print(f\"Average error is {100*(10**error - 1):.2f}%\")"
    ]
   },
   {
@@ -717,7 +996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
