--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data Pre-Processing\n",
     "\n",
-    "Notebook para análise visual do pré-processamento de dados. Utilizamos como referências os notebooks [House Pricing - Feature Engineering](https://www.kaggle.com/code/ayushmehra/house-price-feature-engineering#2.-Feature-Engineering), [House Regression: Beginner Catboost](https://www.kaggle.com/code/jimmyyeung/house-regression-beginner-catboost-top-2) e os notebooks disponíveis na pasta [class_material](./class_material/02_analysis_and_preprocessing.ipynb)."
+    "Notebook para análise visual do pré-processamento de dados. Utilizamos como referências os notebooks [House Pricing - Feature Engineering](https://www.kaggle.com/code/ayushmehra/house-price-feature-engineering#2.-Feature-Engineering), [House Regression: Beginner Catboost](https://www.kaggle.com/code/jimmyyeung/house-regression-beginner-catboost-top-2) e os notebooks disponíveis na pasta [class_material](./class_material/02_analysis_and_preprocessing.ipynb). Grande parte das transformações utilizadas foram retiradas do notebook de aula, visto que já possuiam uma boa performance com os modelos de regressão utilizados aqui. As demais transformações realizadas, como a criação de uma variável de idade, cálculo de assimetria e escala de variáveis foram embasadas nos notebooks de referência."
    ]
   },
   {
@@ -1576,12 +1576,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# preenchendo dados em que NaN pode ser interpretado como None\n",
     "for col in fill_none:\n",
     "    df[col].fillna('None', inplace=True)\n",
     "\n",
+    "# preenchendo dados em que NaN pode ser interpretado como NoBsmt\n",
     "for col in fill_no_bsmt:\n",
     "    df[col].fillna('NoBsmt', inplace=True)\n",
     "\n",
+    "# preenchendo dados NaN com a moda (valor mais frequente)\n",
     "for col in fill_mode:\n",
     "    df[col].fillna(df[col].mode()[0], inplace=True)"
    ]
@@ -1599,6 +1602,13 @@
     "df_nan.sort_values(by='nan_count', ascending=False, inplace=True)\n",
     "cols_nan = df_nan[df_nan['nan_count'] != 0].index.tolist()\n",
     "cols_nonan = df_nan[df_nan['nan_count'] == 0].index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A seguir, vamos utilizar o `KNeighborsRegressor` para preencher os dados faltantes de acordo com os vizinhos mais próximos. Para isso, vamos utilizar apenas as features numéricas, pois o modelo não aceita dados categóricos. Assim, criaremos um modelo que irá prever cada uma das variáveis numéricas faltantes de acordo com os 5 vizinhos mais próximos para, então, preencher os dados faltantes."
    ]
   },
   {
@@ -1630,7 +1640,7 @@
    "source": [
     "### 2.2. Feature Engineering\n",
     "\n",
-    "Aqui, vamos realizar transformações em algumas das variáveis do modelo. Vamos realizar transformações como remoção de imóveis não residenciais, remapeamento de objetos e remoção de colunas desnecessárias."
+    "Aqui, vamos realizar transformações em algumas das variáveis do modelo. Vamos realizar transformações como remoção de imóveis não residenciais, remapeamento de objetos e remoção de colunas desnecessárias. Grande parte das transformações feitas aqui foram obtidas dos notebooks de aula."
    ]
   },
   {
@@ -2288,7 +2298,7 @@
    "source": [
     "### 2.3. Tratamento de features numéricas com distribuições assimétricas ou com alta curtose\n",
     "\n",
-    "Aqui, vamos verificar a assimetria e a curtose das variáveis numéricas contínuas. Vamos realizar transformações de logaritmo para as que, com um nível de significância de 5%, apresentarem distribuição assimétrica ou com alta curtose."
+    "Aqui, vamos verificar a assimetria e a curtose das variáveis numéricas contínuas. Vamos realizar transformações de logaritmo para as que, com um nível de significância de 5%, apresentarem distribuição assimétrica ou com alta curtose. O teste que utilizamos é o teste Jarque-Bera para verificar a normalidade da distribuição, que calcula a assimetria e a curtose e compara com a distribuição normal. Se o p-valor for menor que o nível de significância, a distribuição não pode ser considerada normal, então realizaremos a transformação para tornar a distribuição de dados mais simétrica."
    ]
   },
   {
@@ -2311,37 +2321,6 @@
     "# transformar features nao normais\n",
     "for ft in non_normal:\n",
     "    df[ft] = np.log1p(df[ft])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 311,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       215000\n",
-       "1       105000\n",
-       "2       172000\n",
-       "3       244000\n",
-       "4       189900\n",
-       "         ...  \n",
-       "2925    142500\n",
-       "2926    131000\n",
-       "2927    132000\n",
-       "2928    170000\n",
-       "2929    188000\n",
-       "Name: SalePrice, Length: 2901, dtype: int64"
-      ]
-     },
-     "execution_count": 311,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['SalePrice']"
    ]
   },
   {
@@ -2412,7 +2391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Há um nan em Age Remod.\n",
+    "# Há um nan em Age Remod. Aqui, verificamos se há alguém deixado de fora.\n",
     "df['Age.Remod'].fillna(df['Age.Remod'].median(), inplace=True)\n",
     "df['Age'].fillna(df['Age'].median(), inplace=True)"
    ]
@@ -2423,12 +2402,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verificando existencia de valores infinitos\n",
+    "# verificando existencia de valores infinitos por conta da transformação logarítmica\n",
     "df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
     "\n",
     "df_num = df.select_dtypes(include=np.number)\n",
     "df_cat = df.select_dtypes(exclude=np.number)\n",
     "\n",
+    "# após a verificação, substituimos os valores infinitos pela mediana\n",
     "df_num.fillna(df_num.median(), inplace=True)\n",
     "\n",
     "df = pd.concat([df_num, df_cat], axis=1)"
@@ -2524,6 +2504,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A seguir, vamos transformar todos os dados do dataset em `float64` para evitar erros de tipo ao rodar os modelos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 318,
    "metadata": {},
@@ -2549,7 +2536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Checando limites de anos\n",
+    "# Checando se os anos estão dentro de um limite aceitável\n",
     "X['Year.Built'] = np.where(X['Year.Built'] > 2010, 2010, X['Year.Built'])\n",
     "X['Year.Remod.Add'] = np.where(X['Year.Remod.Add'] > 2010, 2010, X['Year.Remod.Add'])\n",
     "X['Garage.Yr.Blt'] = np.where(X['Garage.Yr.Blt'] > 2010, 2010, X['Garage.Yr.Blt'])\n",
@@ -2567,6 +2554,13 @@
    "source": [
     "# Log-transformação da target\n",
     "y = np.log10(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora, vamos finalizar juntando os dados em um único dataset para, então, salvá-los como Parquet. Esse formato foi escolhido por ser mais rápido para leitura e escrita, além de ser mais compacto que o CSV."
    ]
   },
   {
@@ -3026,106 +3020,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui, vamos realizar um sample para que você possa testar a API com dados obtidos do dataset original. O script vai gerar um arquivo JSON na pasta `fetch_data` que você pode copiar e colar quando for fazer a requisição e comparar o resultado com o que foi printado."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Order': 945,\n",
-       " 'PID': 911370500,\n",
-       " 'MS.SubClass': 120,\n",
-       " 'MS.Zoning': 'RM',\n",
-       " 'Lot.Frontage': 44.0,\n",
-       " 'Lot.Area': 3843,\n",
-       " 'Street': 'Pave',\n",
-       " 'Alley': nan,\n",
-       " 'Lot.Shape': 'IR1',\n",
-       " 'Land.Contour': 'HLS',\n",
-       " 'Utilities': 'AllPub',\n",
-       " 'Lot.Config': 'Inside',\n",
-       " 'Land.Slope': 'Mod',\n",
-       " 'Neighborhood': 'Crawfor',\n",
-       " 'Condition.1': 'Norm',\n",
-       " 'Condition.2': 'Norm',\n",
-       " 'Bldg.Type': 'TwnhsE',\n",
-       " 'House.Style': '1Story',\n",
-       " 'Overall.Qual': 8,\n",
-       " 'Overall.Cond': 5,\n",
-       " 'Year.Built': 2007,\n",
-       " 'Year.Remod.Add': 2008,\n",
-       " 'Roof.Style': 'Hip',\n",
-       " 'Roof.Matl': 'CompShg',\n",
-       " 'Exterior.1st': 'CemntBd',\n",
-       " 'Exterior.2nd': 'CmentBd',\n",
-       " 'Mas.Vnr.Type': 'Stone',\n",
-       " 'Mas.Vnr.Area': 174.0,\n",
-       " 'Exter.Qual': 'Ex',\n",
-       " 'Exter.Cond': 'TA',\n",
-       " 'Foundation': 'PConc',\n",
-       " 'Bsmt.Qual': 'Ex',\n",
-       " 'Bsmt.Cond': 'TA',\n",
-       " 'Bsmt.Exposure': 'Gd',\n",
-       " 'BsmtFin.Type.1': 'GLQ',\n",
-       " 'BsmtFin.SF.1': 1476.0,\n",
-       " 'BsmtFin.Type.2': 'Unf',\n",
-       " 'BsmtFin.SF.2': 0.0,\n",
-       " 'Bsmt.Unf.SF': 120.0,\n",
-       " 'Total.Bsmt.SF': 1596.0,\n",
-       " 'Heating': 'GasA',\n",
-       " 'Heating.QC': 'Ex',\n",
-       " 'Central.Air': 'Y',\n",
-       " 'Electrical': 'SBrkr',\n",
-       " 'X1st.Flr.SF': 1648,\n",
-       " 'X2nd.Flr.SF': 0,\n",
-       " 'Low.Qual.Fin.SF': 0,\n",
-       " 'Gr.Liv.Area': 1648,\n",
-       " 'Bsmt.Full.Bath': 1.0,\n",
-       " 'Bsmt.Half.Bath': 1.0,\n",
-       " 'Full.Bath': 2,\n",
-       " 'Half.Bath': 0,\n",
-       " 'Bedroom.AbvGr': 2,\n",
-       " 'Kitchen.AbvGr': 1,\n",
-       " 'Kitchen.Qual': 'Ex',\n",
-       " 'TotRms.AbvGrd': 5,\n",
-       " 'Functional': 'Typ',\n",
-       " 'Fireplaces': 1,\n",
-       " 'Fireplace.Qu': 'Gd',\n",
-       " 'Garage.Type': 'Attchd',\n",
-       " 'Garage.Yr.Blt': 2007.0,\n",
-       " 'Garage.Finish': 'Fin',\n",
-       " 'Garage.Cars': 2.0,\n",
-       " 'Garage.Area': 482.0,\n",
-       " 'Garage.Qual': 'TA',\n",
-       " 'Garage.Cond': 'TA',\n",
-       " 'Paved.Drive': 'Y',\n",
-       " 'Wood.Deck.SF': 162,\n",
-       " 'Open.Porch.SF': 53,\n",
-       " 'Enclosed.Porch': 0,\n",
-       " 'X3Ssn.Porch': 153,\n",
-       " 'Screen.Porch': 0,\n",
-       " 'Pool.Area': 0,\n",
-       " 'Pool.QC': nan,\n",
-       " 'Fence': nan,\n",
-       " 'Misc.Feature': nan,\n",
-       " 'Misc.Val': 0,\n",
-       " 'Mo.Sold': 6,\n",
-       " 'Yr.Sold': 2009,\n",
-       " 'Sale.Type': 'New',\n",
-       " 'Sale.Condition': 'Partial',\n",
-       " 'SalePrice': 230000}"
-      ]
-     },
-     "execution_count": 328,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "231713\n"
+     ]
     }
    ],
    "source": [
     "# salvar uma linha aleatoria do dataset data para testes como json\n",
     "test = data.sample(1).to_dict(orient='records')[0]\n",
-    "test"
+    "print(test['SalePrice'])\n",
+    "test.pop('SalePrice')\n",
+    "\n",
+    "for key, value in test.items():\n",
+    "    if pd.isna(value):\n",
+    "        test[key] = None\n",
+    "\n",
+    "# salvar em um arquivo json\n",
+    "import json\n",
+    "TEST_PATH = DATA_DIR / 'test.json'\n",
+    "with open(TEST_PATH, 'w') as file:\n",
+    "    json.dump(test, file)"
    ]
   }
  ],
